Fixed slight ui shift on list page item dropdown transition

--- a/app/admin/list/list.module.css
+++ b/app/admin/list/list.module.css
@@ -16,7 +16,13 @@
   cursor: pointer;
 }
 .dropdownIcon {
-  margin: 0 1rem;
+  height: 20px;
+  width: 20px;
+  margin: .25rem 1rem .25rem .25rem;
+  padding: .25rem;
+  /* color: white; */
+  border: solid rgb(171, 171, 171) 1px;
+  background-color: rgb(255, 255, 255)
 }
 .dropdownIcon:hover {
   transform: scale(1.1);
@@ -26,6 +32,7 @@
   width: 100%;
 }
 .listWrapper {
+  position: relative;
   width: 100%;
   border: solid rgb(179, 179, 179) 1px;
   margin: .5rem 0;
@@ -44,6 +51,8 @@
   width: 100%;
   /* border: solid red 2px; */
   margin: 0;
+  padding: 0;
+  border: 0;
 }
 .collapsedContentWrapper:hover {
   cursor: pointer;
@@ -71,6 +80,7 @@
 .expandedInfo {
   display: block;
   position: relative;
+  width: 100%;
   /* margin: .5rem; */
   /* border: solid rgb(255, 255, 255) 4px; */
   text-align: left;
@@ -81,6 +91,9 @@
   max-height: 800px;
   padding: 0rem 1.5rem;
   height: auto;
+  margin: 0;
+  padding: .25rem 1.5rem;
+  border: 0;
 }
 .expandedInfoHidden {
   transition: none;
